--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,9 +1,7 @@
 fixtures:
   repositories:
     concat: "https://github.com/puppetlabs/puppetlabs-concat.git"
-    stdlib:
-      repo: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
-      ref: '4.2.0'
+    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
     alternatives: "git://github.com/puppet-community/puppet-alternatives"
     hadoop_lib: "https://github.com/valtri/cesnet-hadoop_lib"
   symlinks:
